...
  'ケーシィ': 'Abra',
  'ケケンカニ': 'Crabominable',
  'ゲコガシラ': 'Frogadier',
  'ケッキング': 'Slaking',
  'ゲッコウガ': 'Greninja',
  'ゲノセクト': 'Genesect',
  'ケムッソ': 'Wurmple',
  'ケララッパ': 'Trumbeak',
  'ケルディオ': 'Keldeo',
  'ケロマツ': 'Froakie',
  'ゲンガー': 'Gengar',
  'ケンタロス': 'Tauros',
  'ケンホロウ': 'Unfezant',
...
